adds cell for data loader

--- a/notebooks/sparse-autoencoder.ipynb
+++ b/notebooks/sparse-autoencoder.ipynb
@@ -380,17 +380,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SPLIT DATA INTO TRAIN / VAL AND PUT IN DATA LOADER\n",
+    "\n",
+    "dataset_size = len(activations)\n",
+    "indices = list(range(dataset_size))\n",
+    "split = int(np.floor(config['fraction_val'] * len(dataset)))\n",
+    "\n",
+    "np.random.shuffle(indices)\n",
+    "\n",
+    "train_indices, val_indices = indices[split:], indices[:split]\n",
+    "train_data = activations[train_indices]\n",
+    "val_data = activations[val_indices]\n",
+    "\n",
+    "train_dataset = ActivationDataset(train_data, labels=train_indices)\n",
+    "val_dataset = ActivationDataset(val_data, labels=val_indices)\n",
+    "\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset, \n",
+    "    batch_size=config[\"batch_size\"],\n",
+    "    shuffle=True\n",
+    "    )\n",
+    "\n",
+    "val_loader = DataLoader(\n",
+    "    val_dataset, \n",
+    "    batch_size=config[\"batch_size\"],\n",
+    "    shuffle=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Training Loss: 0.8856, Validation Loss: 0.0188\n",
+      "Epoch: 1, Training Loss: 0.8880, Validation Loss: 0.0188\n",
       "Epoch: 2, Training Loss: 0.0169, Validation Loss: 0.0166\n",
-      "Epoch: 3, Training Loss: 0.0162, Validation Loss: 0.0165\n",
-      "Epoch: 4, Training Loss: 0.0165, Validation Loss: 0.0169\n"
+      "Epoch: 3, Training Loss: 0.0162, Validation Loss: 0.0165\n"
      ]
     }
    ],
@@ -411,7 +444,7 @@
     "    val_loader=val_loader,\n",
     "    lam=config[\"lam\"],\n",
     "    optimizer=optimizer,\n",
-    "    n_epochs=1000)"
+    "    n_epochs=3)"
    ]
   },
   {
